<resources>
    <string name="app_name">RetrofitEx</string>
    <string name="app_name_debug">RetrofitEx Debug</string>
    <string name="app_name_dev">RetrofitEx Dev</string>
    <string name="login">Login</string>
    <string name="refresh_token">Refresh Token</string>
    <string name="test_service">Test Service</string>
    <string name="remove_token">Remove Token</string>
    <string name="remove_refresh_token">Remove Refresh Token</string>
    <string name="switch_text">Switch\n<b>ascasc</b></string>
</resources>