<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:checked="true"
            android:text="@string/switch_text" />



        <Button
            android:id="@+id/refreshTokenBtn"
            android:text="@string/refresh_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/permissionBtn"
            android:text="Run Time Permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/removeTokenBtn"
            android:text="@string/remove_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/removeRefreshTokenBtn"
            android:text="@string/remove_refresh_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/testServiceBtn"
            android:text="@string/test_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/loginDataLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Body1"
            tools:text="Token" />

        <TextView
            android:id="@+id/serviceDataLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Body1"
            tools:text="User Data" />


    </LinearLayout>
</ScrollView>